Rutas para GET estudiantes y GET docentes
